Links to the new icon

--- a/frontend/src/modules/editor/contentObject/less/editorPageComponentList.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPageComponentList.less
@@ -187,6 +187,7 @@
     float: left;
     margin: 5px 20px 0 0;
     background-repeat: no-repeat;
+    background-size: contain;
     background-image: url("assets/icon-default.png");
     // core components, override above
     &.adapt-contrib- {
@@ -229,6 +230,45 @@
       &textInput {
         background-image: url("assets/icon-text.png");
       }
-    }
+      &confidenceSlider {
+				background-image: url("assets/confidence-slider.png");
+			}
+			&flipcard {
+				background-image: url("assets/flipcard.png");
+			}
+			&responsiveIframe {
+				background-image: url("assets/iframe.png");
+			}
+			&openTextInput {
+				background-image: url("assets/open-text-input.png");
+			}
+			&reveal {
+				background-image: url("assets/reveal.png");
+			}
+		}
+
+		&.adapt- {
+			&brightcove {
+				background-image: url("assets/brightcove.png");
+			}
+			&expose {
+				background-image: url("assets/expose.png");
+			}
+			&flipper {
+				background-image: url("assets/flipper.png");
+			}
+			&h5p {
+				background-image: url("assets/H5P.png");
+			}
+			&ppq {
+				background-image: url("assets/pinpoint.png");
+			}
+			&stacklist {
+				background-image: url("assets/stacklist.png");
+			}
+			&tabs {
+				background-image: url("assets/tabs.png");
+			}
+		}
   }
 }
