--- a/frontend/src/modules/contextMenu/less/contextMenu.less
+++ b/frontend/src/modules/contextMenu/less/contextMenu.less
@@ -1,6 +1,6 @@
 // Context Menu styling
 // ==============
-@context-menu-color:#34bee0;
+@context-menu-color: @primary-color;
 @context-menu-text-color:#fff;
 
 @context-menu-icon-color:#fff;
@@ -39,7 +39,7 @@
             padding:12px;
             text-decoration: none;
             color: @context-menu-item-text-color;
-                border-top: 1px solid #60cce7;
+            border-top: 1px solid @primary-color;
             transition:all 0.3s;
             &:hover {
                 color:@context-menu-item-text-hover-color;
