--- a/frontend/src/core/less/colours.less
+++ b/frontend/src/core/less/colours.less
@@ -14,18 +14,14 @@
 @adapt-white:#fff;
 ////////////
 
-@midnight-blue: #0a2d50;
-@palest-grey-blue: #ebedef;
-
-
 /*///////////
 // Editable variables
 //
 // Changes you make here will pull through the whole of the Authoring Tool.
 /////////*/
-@primary-color: @midnight-blue;
+@primary-color:@adapt-primary-color;
 @secondary-color:@adapt-secondary-color;
-@tertiary-color:@palest-grey-blue;
+@tertiary-color:@adapt-tertiary-color;
 @quaternary-color:@adapt-quaternary-color;
 @white:@adapt-white;
 ///////////
@@ -52,7 +48,7 @@
 @sidebar-color: @tertiary-color;
 @sidebar-text-color: @primary-color;
 @sidebar-item-hover-color: lighten(@tertiary-color, 10%);
-@sidebar-item-hover-text-color: lighten(@sidebar-text-color, 10%);
+@sidebar-item-hover-text-color: white;
 @sidebar-input-text-color: @white;
 @sidebar-input-placeholder-color: #9fa8ad;
 @sidebar-input-color: #627178;
